Fix table border spacing

--- a/src/styles/daterangepicker.scss
+++ b/src/styles/daterangepicker.scss
@@ -274,6 +274,7 @@ $daterangepicker-ranges-active-border-radius: $daterangepicker-border-radius !de
   table {
     width: 100%;
     margin: 0;
+    border-spacing: initial;
   }
 
   td, th {
